--- a/templates/school/index.html
+++ b/templates/school/index.html
@@ -4,7 +4,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>
+    National Skill Training Institute</title>
+    <link rel="icon" type="image/x-icon" href="/static/images/title.ico">
 
   <style media="screen">
     .jumbotron {
@@ -33,7 +35,9 @@
       -moz-animation: glow 1s ease-in-out infinite alternate;
       animation: glow 1s ease-in-out infinite alternate;
     }
-
+    .lead a{
+      width: 520px;
+    }
     
   </style>
 
@@ -45,11 +49,11 @@
   <br>
   <div class="jumbotron" style="margin-bottom: 0px;margin-top: 0px;">
     <br>
-    <h1 class="display-4 glow"><b>School Management System</b></h1>
+    <h1 class="display-4 glow"><b>Management System</b></h1>
 
     <br><br>
-    <h3 class="text-center" style="color:white;">Built using Python Django</h3>
-    <br><br><br><br><br>
+    <h3 class="text-center" style="color:white;">NATIONAL SKILL TRAINING INSTITUTE</h3>
+   <br><br><br><br><br>
     <p class="lead">
       <a class="btn btn-danger btn-lg" href="/studentsignup" role="button">Sign Up as Student</a>
     </p>
