--- a/templates/school/admin_teacher_student_card.html
+++ b/templates/school/admin_teacher_student_card.html
@@ -59,7 +59,7 @@
   <div class="grid-container">
     <div class="grid-item">
       <div class="card">
-        <img src="{% static "images/indexb.jpg" %}" alt="John" style="width:100%">
+        <img src="{% static "images/admintools.png" %}" height="300px" alt="ADMIN" style="width:100%">
         <p class="title">ADMIN Area</p>
         <p><a href="/adminclick"><button>View</button></a></p>
       </div>
@@ -68,16 +68,16 @@
 
     <div class="grid-item">
       <div class="card">
-        <img src="{% static "images/indexb.jpg" %}" alt="John" style="width:100%">
-        <p class="title">TEACHER Area</p>
+        <img src="{% static "images/trainer.jpg" %}" height="300px" alt="TRAINER" style="width:100%">
+        <p class="title">TRAINER Area</p>
         <p><a href="/teacherclick"><button>View</button></a></p>
       </div>
     </div>
 
     <div class="grid-item">
       <div class="card">
-        <img src="{% static "images/indexb.jpg" %}" alt="John" style="width:100%">
-        <p class="title">STUDENT Area</p>
+        <img src="{% static "images/trainees.png" %}" height="300px" alt="TRAINEES" style="width:100%">
+        <p class="title">TRAINEES Area</p>
         <p><a href="/studentclick"><button>View</button></a></p>
       </div>
     </div>
