--- a/templates/school/adminsignup.html
+++ b/templates/school/adminsignup.html
@@ -6,97 +6,105 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>SMS - Django</title>
-  <style type="text/css">
-    body {
-      color: #aa082e;
-      background-color: #b6bde7;
-      font-family: 'Roboto', sans-serif;
-    }
+  <title>
+    National Skill Training Institute</title>
+    <link rel="icon" type="image/x-icon"  href="/static/images/title.ico">
+    <style type="text/css">
+      body {
+          color: #333;
+          background-color: #f4f4f4;
+          font-family: 'Roboto', sans-serif;
+      }
 
-    a:link {
-      text-decoration: none;
-    }
+      a:link {
+          text-decoration: none;
+      }
 
-    .note {
-      text-align: center;
-      height: 80px;
-       background: -webkit-linear-gradient(left, #343a40, #607d8b);
-      color: #fff;
-      font-weight: bold;
-      line-height: 80px;
-    }
+      .note {
+          text-align: center;
+          height: 80px;
+          background: -webkit-linear-gradient(left, #343a40, #607d8b);
+          color: #fff;
+          font-weight: bold;
+          line-height: 80px;
+      }
 
-    .form-content {
-      padding: 5%;
-      border: 1px solid #ced4da;
-      margin-bottom: 2%;
-    }
+      .form-content {
+          padding: 3%;
+          border: 1px solid #ced4da;
+          margin: 2% auto;
+          max-width: 400px;
+          background-color: #fff;
+          border-radius: 10px;
+          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+      }
 
-    .form-control {
-      border-radius: 1.5rem;
-    }
+      .form-control {
+          border-radius: 1.5rem;
+          margin-bottom: 20px;
+          padding: 2%;
+          border: 1px solid #ced4da;
+      }
 
-    .btnSubmit {
-      border: none;
-      border-radius: 1.5rem;
-      padding: 1%;
-      width: 20%;
-      cursor: pointer;
-      background: #4caf50;
-      color: #fff;
-    }
+      .btnSubmit {
+          border: none;
+          border-radius: 1.5rem;
+          padding: 2%;
+          width: 100%;
+          cursor: pointer;
+          background: #4caf50;
+          color: #fff;
+          font-weight: bold;
+      }
+
+      .btnSubmit:hover {
+          background: #45a049;
+      }
+
+      .text-center {
+          text-align: center;
+          margin-top: 10px;
+      }
   </style>
-
 </head>
-
-
 <body>
   {% include "school/navbar.html" %}
   <br>
   <br>
   <br>
   <br>
-
-
-
-
-  <!--- signup page for teacher by admin(sumit)  ---------->
   <form method="post">
-    {% csrf_token %}
-    <div class="container register-form">
-      <div class="form">
-        <div class="note">
-          <p>Add New Admin To School</p>
-        </div>
-
-        <div class="form-content">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                {% render_field form.first_name class="form-control" placeholder="First Name" %}
+      {% csrf_token %}
+      <div class="container register-form">
+          <div class="form">
+              <div class="note">
+                  <p>Add New Admin To NSTI</p>
               </div>
-              <div class="form-group">
-                {% render_field form.username class="form-control" placeholder="Username" %}
+              <div class="form-content">
+                <div align="center" width="150px" height="150px">
+                    <i class="fa-solid fa-user fa-bounce fa-2xl" style="color: #0910ec;"></i>
+                </div>
+                  <div class="form-group">
+                    <i class="fa-sharp fa-solid fa-arrow-down fa-fade" style="color: #e80202;"></i>
+                      {% render_field form.first_name class="form-control" placeholder="First Name" %}
+                  </div>
+                  <div class="form-group">
+                    <i class="fa-sharp fa-solid fa-arrow-down fa-fade" style="color: #e80202;"></i>
+                      {% render_field form.last_name class="form-control" placeholder="Last Name" %}
+                  </div>
+                  <div class="form-group">
+                    <i class="fa-regular fa-user fa-beat-fade" style="color: #ff0000;"></i>
+                      {% render_field form.username class="form-control" placeholder="Username" %}
+                  </div>
+                  <div class="form-group">
+                    <i class="fa-solid fa-lock" style="color: #ff0000;"></i>
+                      {% render_field form.password class="form-control" placeholder="Password" %}
+                  </div>
+                  <button type="submit" class="btnSubmit">Submit</button>
+                  <div class="text-center">Already have an account? <a href="adminlogin">Login here</a></div>
               </div>
-
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                {% render_field form.last_name class="form-control" placeholder="Last Name" %}
-              </div>
-              <div class="form-group">
-                {% render_field form.password class="form-control" placeholder="Password" %}
-              </div>
-
-            </div>
           </div>
-          <button type="submit" class="btnSubmit">Submit</button>
-          <div class="text-center">Already have an account? <a href="adminlogin">Login here</a></div>
-        </div>
       </div>
-    </div>
-
   </form>
 
 
