--- a/templates/school/footer.html
+++ b/templates/school/footer.html
@@ -75,7 +75,7 @@
       <div class="col-md-12 col-sm-12">
         <div style="color:#ffffff;" class="wow fadeInUp footer-copyright">
           <p>
-             &copy; 2021 - Developed By Sumit Kumar </p>
+            Copyright © 2023 Edunet Foundation. All Rights Reserved. </p>
         </div>
       </div>
     </div>
