--- a/templates/school/homebase.html
+++ b/templates/school/homebase.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SMS - Django</title>
+  <title>
+    National Skill Training Institute</title>
+    <link rel="icon" type="image/x-icon"  href="/static/images/title.ico">
   <style media="screen">
     .jumbotron {
       margin-top: 0px;
