--- a/templates/school/studentbase.html
+++ b/templates/school/studentbase.html
@@ -4,7 +4,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SMS - Django</title>
+  <title>
+    National Skill Training Institute</title>
+    <link rel="icon" type="image/x-icon"  href="/static/images/title.ico">
 
   <style media="screen">
     a:link {
