--- a/templates/school/studentlogin.html
+++ b/templates/school/studentlogin.html
@@ -5,7 +5,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>SMS - Django</title>
+  <title>
+    National Skill Training Institute</title>
+    <link rel="icon" type="image/x-icon"  href="/static/images/title.ico">
 
 
   <style type="text/css">
