--- a/templates/school/teachersignup.html
+++ b/templates/school/teachersignup.html
@@ -7,103 +7,120 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>SMS - Django</title>
-  <style type="text/css">
+  <style>
     body {
-      color: #aa082e;
-      background-color: #b6bde7;
-      font-family: 'Roboto', sans-serif;
+        color: #333;
+        background-color: #b6bde7;
+        font-family: 'Roboto', sans-serif;
     }
 
     a:link {
-      text-decoration: none;
+        text-decoration: none;
     }
 
     .note {
-      text-align: center;
-      height: 80px;
-       background: -webkit-linear-gradient(left, #343a40, #607d8b);
-      color: #fff;
-      font-weight: bold;
-      line-height: 80px;
+        text-align: center;
+        height: 80px;
+        background: linear-gradient(to right, #343a40, #607d8b);
+        color: #fff;
+        font-weight: bold;
+        line-height: 80px;
+        border-radius: 10px 10px 0 0;
     }
 
     .form-content {
-      padding: 5%;
-      border: 1px solid #ced4da;
-      margin-bottom: 2%;
+        padding: 5%;
+        border: 1px solid #ced4da;
+        margin: 2% auto;
+        max-width: 400px;
+        background-color: #fff;
+        border-radius: 0 0 10px 10px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     }
 
     .form-control {
-      border-radius: 1.5rem;
+        border-radius: 1.5rem;
+        margin-bottom: 20px;
+        padding: 2%;
+        border: 1px solid #ced4da;
     }
 
     .btnSubmit {
-      border: none;
-      border-radius: 1.5rem;
-      padding: 1%;
-      width: 20%;
-      cursor: pointer;
-      background: #4caf50;
-      color: #fff;
+        border: none;
+        border-radius: 1.5rem;
+        padding: 2%;
+        width: 100%;
+        cursor: pointer;
+        background: #4caf50;
+        color: #fff;
+        font-weight: bold;
     }
-  </style>
 
+    .btnSubmit:hover {
+        background: #45a049;
+    }
+
+    .text-center {
+        text-align: center;
+        margin-top: 10px;
+    }
+</style>
 </head>
-
-
 <body>
-  {% include "school/navbar.html" %}
-  <br>
-  <br>
-  <br>
-  <br>
-
-
-
-
-  <!--- signup page for teacher by admin(sumit)  ---------->
-  <form method="post">
+{% include "school/navbar.html" %}
+<br>
+<br>
+<form method="post">
     {% csrf_token %}
     <div class="container register-form">
-      <div class="form">
-        <div class="note">
-          <p>Apply For Teacher Job </p>
-        </div>
-
-        <div class="form-content">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                {% render_field form1.first_name class="form-control" placeholder="First Name" %}
-              </div>
-              <div class="form-group">
-                {% render_field form1.username class="form-control" placeholder="Username" %}
-              </div>
-              <div class="form-group">
-                {% render_field form2.mobile class="form-control" placeholder="Contact" %}
-              </div>
-
+        <div class="form">
+            <div class="note">
+                <p>Apply For Trainer Job</p>
             </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                {% render_field form1.last_name class="form-control" placeholder="Last Name" %}
-              </div>
-              <div class="form-group">
-                {% render_field form1.password class="form-control" type="password" placeholder="Password" %}
-              </div>
-              <div class="form-group">
-                {% render_field form2.salary class="form-control" placeholder="Salary ($)" %}
-              </div>
-
+            <div class="form-content">
+              <div align="center" width="150px" height="150px">
+                <i class="fa-solid fa-user fa-bounce fa-2xl md-4 pd-4" style="color: #ec2309;"></i>
             </div>
-          </div>
-          <button type="submit" class="btnSubmit">Apply</button>
-          <div class="text-center">Already have an account? <a href="teacherlogin">Login here</a></div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                    <i class="fa-sharp fa-solid fa-arrow-down fa-fade" style="color: #e80202;"></i>
+
+                            {% render_field form1.first_name class="form-control" placeholder="First Name" %}
+                        </div>
+                        <div class="form-group">
+                    <i class="fa-regular fa-user fa-beat-fade" style="color: #ff0000;"></i>
+                          
+                            {% render_field form1.username class="form-control" placeholder="Username" %}
+                        </div>
+                        <div class="form-group">
+                          <i class="fa-solid fa-phone" style="color: #fe0101;"></i>
+                            {% render_field form2.mobile class="form-control" placeholder="Phone Number" %}
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                    <i class="fa-sharp fa-solid fa-arrow-down fa-fade" style="color: #e80202;"></i>
+
+                            {% render_field form1.last_name class="form-control" placeholder="Last Name" %}
+                        </div>
+                        <div class="form-group">
+                    <i class="fa-solid fa-lock" style="color: #ff0000;"></i>
+
+                            {% render_field form1.password class="form-control" type="password" placeholder="Password" %}
+                        </div>
+                        <div class="form-group">
+                          <i class="fa-solid fa-dollar-sign" style="color: #e90101;"></i>
+                            {% render_field form2.salary class="form-control" placeholder="Salary ($)" %}
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btnSubmit">Apply</button>
+                <div class="text-center">Already have an account? <a href="teacherlogin">Login here</a></div>
+            </div>
         </div>
-      </div>
     </div>
-
-  </form>
+</form>
 
 
 
